[package]
name = "web_"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
actix-service = "2.0"
futures = "0.3"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"

[dev-dependencies]
actix-rt = "2.5"
rusqlite="0.26"
