[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-chat = { path = "../rusty-chat" }
reqwest = "0.11"
postgres="0.19"
rusqlite="0.26"
tokio="1.14"
serde="1.0"
mongodb="2.0"
diesel = { version = "1.4", features = ["mysql"] }
dotenv = "0.15"

# anyhow = "1.0"
async-std = { version = "1.5" }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.5", features = ["mysql", "chrono","runtime-actix-native-tls"] }
    
