[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
rusqlite="0.26"
tokio="1.14"
serde="1.0"
mongodb="2.0"
# diesel = { version = "1.4", features = ["mysql"] }
# sqlx = { version = "0.5", features = ["mysql", "chrono","runtime-actix-native-tls"] }
dotenv = "0.15"

async-std = { version = "1.5" }
chrono = { version = "0.4", features = ["serde"] }