[package]
name = "example-todos"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde_json ="1"
serde = { version = "1", features = ["derive"] }
rbson = "2.0"
tokio = { version = "1", features = ["macros"] }
lazy_static="1.4"

# logging lib(required)
log = "0.4"
fast_log="1.5"

rbatis = { version = "^4.0.41", default-features = false, features_ = ["mysql","runtime-tokio-rustls","debug_mode"] }
salvo = "^0.37.4"