[package]
name = "example-todos"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-std = "1.11.0"
fast_log = "1.5.24"
log = "0.4.17"
once_cell = "1.12.0"
rbatis = "4.0.7"
rbdc = "4"
rbdc-mysql = "4"
rbs = "4"
salvo = "0.56"
serde = { version = "1.0.143", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
