[package]
name = "chat_web"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.33", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
salvo = "0.58"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
serde = "1.0"
serde_json = "1.0"
once_cell = "1.18"
