[package]
name = "chronology-api"
version = "0.1.0"
authors = ["Joel Denning <joeldenning@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
diesel-derive-enum = { version = "1", features = ["postgres"] }
rocket_cors = "0.5.2"
diesel_logger = "0.1.1"
env_logger = "~0.7"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["diesel_postgres_pool", "json"]